@@ -154,8 +154,9 @@ BA 49- [libpari] functions Zp_sqrt, ZpXQ_sqrt
        mshecke, ellmsinit, msatkinlehner, msstar, mseval, mspathgens, mspathlog,
        msissymbol
 BA 51- GP declaration localprec()
-HIL52- [libpari] functions Fl_powers_pre, Fl_ellj_pre, Fl_elltwist
-BA 53- [libpari] functions Fl_powers, Fp_powers, Fl_ellj,
+HIL52- [libpari] functions Fl_powers_pre, Fl_ellj_pre, Fl_elldisc_pre,
+                           Fl_elltwist
+BA 53- [libpari] functions Fl_powers, Fp_powers, Fl_ellj, Fl_elldisc,
                            Fl_ellj_to_a4a6, Flxq_ellj_to_a4a6
 BA 54- [libpari] functions FpXQX_div_by_X_x, FqX_div_by_X_x
 HIL55- [libpari] function Flx_oneroot_split, zxX_to_FlxX
